test_private/99_error_log/2025-04-09_15-04-07/test_generate_topology1.ipynb.txt
Error occurred in: C:\my_things\disk_backup\4_QEDA\0_tianyan_proj\3_EDA_Q_codeup\test_private\test_topology\test_generate_topology1.ipynb
================================================================================
Traceback (most recent call last):
  File "C:\my_things\disk_backup\4_QEDA\0_tianyan_proj\3_EDA_Q_codeup\test_private\run_all_ipynb.py", line 87, in execute_notebook_without_interruption
    ep.preprocess(notebook, {'metadata': {'path': current_dir}})
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\nbconvert\preprocessors\execute.py", line 97, in preprocess
    with self.setup_kernel():
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\contextlib.py", line 137, in __enter__
    return next(self.gen)
           ^^^^^^^^^^^^^^
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\nbclient\client.py", line 600, in setup_kernel
    self.start_new_kernel(**kwargs)
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\jupyter_core\utils\__init__.py", line 166, in wrapped
    return loop.run_until_complete(inner)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\asyncio\base_events.py", line 653, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\nbclient\client.py", line 550, in async_start_new_kernel
    await ensure_async(self.km.start_kernel(extra_arguments=self.extra_arguments, **kwargs))
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\jupyter_core\utils\__init__.py", line 182, in ensure_async
    result = await obj
             ^^^^^^^^^
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\jupyter_client\manager.py", line 93, in wrapper
    raise e
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\jupyter_client\manager.py", line 85, in wrapper
    out = await method(self, *args, **kwargs)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\jupyter_client\manager.py", line 397, in _async_start_kernel
    kernel_cmd, kw = await self._async_pre_start_kernel(**kw)
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\jupyter_client\manager.py", line 359, in _async_pre_start_kernel
    self.kernel_spec,
    ^^^^^^^^^^^^^^^^
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\jupyter_client\manager.py", line 182, in kernel_spec
    self._kernel_spec = self.kernel_spec_manager.get_kernel_spec(self.kernel_name)
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\my_things\apps\anaconda3\envs\qeda_env\Lib\site-packages\jupyter_client\kernelspec.py", line 287, in get_kernel_spec
    raise NoSuchKernel(kernel_name)
jupyter_client.kernelspec.NoSuchKernel: No such kernel named qeda_env
